<resources>
    <string name="app_name">Registration_Form</string>
    <string name="title">Registration Form</string>
    <string name="name">Name:</string>
    <string name="gender">Gender</string>
    <string name="PhoneNo">Phone No:</string>
    <string name="email">Email:</string>
    <string name="marry">Married?</string>
    <string name="qualification">Qualification:</string>
    <string name="address">Address:</string>
    <string name="country">Country:</string>
</resources>